[tool.poetry]
name = "subsai"
version = "1.0.0"
description = "Subtitles generation tool powered by OpenAI's Whisper and its variants."
authors = ["abdeladim-s"]
license = "LICENSE"
readme = "README.md"

[project.urls]
"Homepage" = "https://github.com/abdeladim-s/subsai"
"Bug Tracker" = "https://github.com/abdeladim-s/subsai/issues"

[tool.poetry.dependencies]
python = ">=3.8,<3.9.7 || >3.9.7,<4.0"
torch = "^1.13.1"
openai-whisper = "^20230124"
streamlit = "^1.19.0"
streamlit-player = "^0.1.5"
streamlit-aggrid = "^0.3.4"
whisper-timestamped = {git = "https://github.com/linto-ai/whisper-timestamped"}
pandas = "^1.5.2"
pysubs2 = "^1.6.0"
ffsubsync = "^0.4.23"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
subsai = 'subsai.cli:main'
subsai-webui = 'subsai.webui:run'